[project]
name = "voicetest"
version = "0.20"
description = "A generic test harness for voice agent workflows"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "pld", email = "50706+pld@users.noreply.github.com" }
]
keywords = ["voice", "ai", "testing", "retell", "vapi", "bland", "livekit", "telnyx"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "livekit-agents>=1.0,<2.0",
    "livekit-plugins-openai>=1.0,<2.0",
    "livekit-plugins-silero>=1.0,<2.0",
    "dspy>=2.6",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "textual>=7.2.0",
    "duckdb>=1.4.3",
    "pyarrow>=22.0.0",
    "punq>=0.7.0",
    "fastapi>=0.115",
    "uvicorn>=0.32",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.21",
    "bland>=0.3.0",
    "retell-sdk>=5.0",
    "vapi-server-sdk>=0.2",
    "sqlalchemy>=2.0",
    "duckdb-engine>=0.13",
    "telnyx>=4.41.0",
]

[project.urls]
Homepage = "https://voicetest.dev"
Repository = "https://github.com/voicetestdev/voicetest"
Issues = "https://github.com/voicetestdev/voicetest/issues"

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.0",
]
re2 = [
    "google-re2>=1.1",
]
macos = [
    "mlx-audio>=0.3",
    "misaki[en]>=0.1",
]

[project.scripts]
voicetest = "voicetest.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["voicetest"]

[tool.hatch.build.targets.wheel.force-include]
"web/dist" = "web/dist"

[tool.hatch.build.targets.sdist]
include = [
    "voicetest/**",
    "web/dist/**",
    "pyproject.toml",
    "README.md",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
preview = true
select = [
    "E",       # pycodestyle errors
    "W",       # pycodestyle warnings
    "F",       # pyflakes
    "I",       # isort
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "PLC0415", # imports at top
    "UP",      # pyupgrade
    "SIM",     # flake8-simplify
    "TID",     # tidy imports
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415"]

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: end-to-end tests requiring Docker Compose (deselect with '-m \"not e2e\"')",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.28",
    "pre-commit>=4.0",
]

[tool.uv]
prerelease = "allow"
